# searchlight-specs

./: .gitignore  .gitreview  .zuul.yaml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
images/: ZeroDown.vsdx
specs/: skeleton.rst  template.rst
specs/mitaka/: es-delete-journal.rst  index.rst  notification-forwarding.rst  per-resource-policy.rst  sample.rst  search-admin-only-fields.rst  zero-downtime-reindexing.rst
specs/newton/: add-nova-server-groups-plugin.rst  cross-region-search.rst  index-performance-enhancement.rst  index.rst  notification-forwarding.rst  pipeline-architecture.rst  sample.rst  support-nova-microversions.rst
specs/ocata/: index.rst  ironic-plugin.rst
specs/pike/: default-filters.rst  index.rst  nova-service-plugin.rst
specs/queens/: index.rst
specs/rocky/: index.rst
specs/stein/: index.rst  placeholder.rst
specs/train/: index.rst  tacker-plugin.rst
tests/: test_titles.py
